--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Practice application for Docker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r esm index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/weschang15/docker-simpleweb/issues"
   },
-  "homepage": "https://github.com/weschang15/docker-simpleweb#readme"
+  "homepage": "https://github.com/weschang15/docker-simpleweb#readme",
+  "dependencies": {
+    "esm": "^3.2.22",
+    "express": "^4.16.4"
+  }
 }
